--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MindValley</string>
+
+    <string name="channel">Channel</string>
+    <string name="new_episodes">New Episodes</string>
+    <string name="browse_by_categories">Browse by categories</string>
 </resources>
